fix navbar z-index

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -143,3 +143,7 @@ iframe[src*="youtube.com"] {
   aspect-ratio: 16/9;
   height: auto;
 }
+
+.navbar--fixed-top {
+  z-index: calc(var(--ifm-z-index-fixed) + 2);
+}
